--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿cmake_minimum_required(VERSION 3.26)
 
 # ------------------ PROJECT NAME ------------------
-project("MINIVK-Rendering")
+project("MiniGL")
 # --------------------------------------------------
 
 # ------------------ CXX FLAGS ---------------------
